# thermal-mcp-server

./: .gitignore  CONTRIBUTING.md  DEEP_DIVE_REPORT.md  LICENSE  QUICKSTART.md  README.md  debug_opt.py  pyproject.toml  requirements.txt  thermal-mcp-project-plan.md
.github/workflows/: test.yml
docs/: MCP_USAGE.md  TEST_STRATEGY.md  VALIDATION.md  mcp.md  physics.md  pre_publish_review_pr8.md
docs/history/: MCP_USAGE.md  PR_READY.md  refactor_plan.md
docs/history/legacy_ci/: test.yml
docs/history/legacy_examples/: README.md  validation_nvidia_h100.py
docs/history/legacy_src/: mcp_server_legacy.py  src_init_legacy.py
docs/history/legacy_src/models/: __init__.py
docs/history/legacy_tests/: __init__.py  test_coldplate.py  test_published_case_studies.py  test_validation.py
examples/: real_chip_benchmarks.py  validation_walkthrough.md
scripts/: run_tests.sh
src/: mcp_server.py
src/models/: coldplate.py
src/thermal_mcp_server/: __init__.py  __main__.py  mcp_server.py  physics.py  schemas.py
tests/: test_coldplate.py  test_mcp_server.py  test_mcp_tools.py  test_physics_behavior.py  test_published_case_studies.py  test_validation.py
