[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "thermal-mcp-server"
version = "0.1.0"
description = "AI-powered thermal analysis for data center liquid cooling via Model Context Protocol"
authors = [{name = "Riccardo Vietri", email = "riccardo.vietri@gmail.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
]
keywords = ["thermal", "cooling", "mcp", "ai", "data-center", "gpu"]

dependencies = [
    "fastmcp>=0.2.0",
    "numpy>=1.26.0",
    "anthropic>=0.18.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "black>=23.12.0",
    "pylint>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/riccardovietri/thermal-mcp-server"
Repository = "https://github.com/riccardovietri/thermal-mcp-server"
Issues = "https://github.com/riccardovietri/thermal-mcp-server/issues"

[tool.setuptools]
packages = ["src", "src.models"]
