[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "thermal-mcp-server"
version = "0.2.0"
description = "MCP server for datacenter GPU liquid cooling thermal analysis"
authors = [{name = "Riccardo Vietri"}]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.10"
keywords = ["mcp", "thermal", "cooling", "gpu", "datacenter", "liquid-cooling", "nvidia", "h100", "b200"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "fastmcp>=2.0,<3",
    "pydantic>=2.6.0",
]

[project.urls]
Homepage = "https://github.com/riccardovietri/thermal-mcp-server"
Source = "https://github.com/riccardovietri/thermal-mcp-server"
"Bug Tracker" = "https://github.com/riccardovietri/thermal-mcp-server/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
